--- a/index.html
+++ b/index.html
@@ -17,21 +17,22 @@
         .view { display: none; height: 100dvh; width: 100vw; flex-direction: column; box-sizing: border-box; }
         .view.active { display: flex; }
 
-        /* 1. 席選択 */
+        /* 席選択 */
         .grid-tables { display: grid; grid-template-columns: repeat(3, 1fr); grid-auto-rows: min-content; gap: 10px; padding: 15px; overflow-y: auto; flex: 1; -webkit-overflow-scrolling: touch; }
         .table-btn { background: #fff; border: 2px solid var(--accent); padding: 15px 5px; text-align: center; border-radius: 12px; cursor: pointer; box-shadow: 0 4px 6px rgba(0,0,0,0.05); min-height: 85px; display: flex; flex-direction: column; justify-content: center; }
         .table-btn.occupied { background: #e8f5e9; border-color: #27ae60; }
         .price-badge { display: block; font-size: 11px; color: #e67e22; margin-top: 5px; font-weight: bold; }
 
-        /* キーパッド */
-        .guest-num-display { font-size: 40px; font-weight: bold; margin: 10px 0; color: var(--primary); background: #eee; border-radius: 10px; padding: 10px; text-align: center; }
+        /* 客数入力 */
+        .guest-input-container { text-align: center; padding: 20px; flex: 1; overflow-y: auto; }
+        .guest-num-display { font-size: 40px; font-weight: bold; margin: 10px 0; color: var(--primary); background: #eee; border-radius: 10px; padding: 10px; }
         .keypad { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; max-width: 280px; margin: auto; }
         .key-btn { background: #fff; border: 1px solid #ddd; padding: 15px; font-size: 20px; font-weight: bold; border-radius: 10px; cursor: pointer; }
 
-        /* 3. メニュー */
+        /* メニュー */
         .menu-container { display: flex; flex: 1; overflow: hidden; }
         .sidebar { width: 110px; background: #f0f0f0; overflow-y: auto; border-right: 1px solid #ddd; flex-shrink: 0; box-sizing: border-box; padding-bottom: 200px !important; }
-        .cat { padding: 16px 8px; font-size: 12px; text-align: center; border-bottom: 1px solid #ddd; cursor: pointer; color: #555; line-height: 1.3; }
+        .cat { padding: 16px 8px; font-size: 11px; text-align: center; border-bottom: 1px solid #ddd; cursor: pointer; color: #555; line-height: 1.3; }
         .cat.active { background: #fff; color: var(--primary); font-weight: bold; border-left: 5px solid var(--primary); }
         .item-grid { flex: 1; overflow-y: auto; padding: 10px; display: grid; grid-template-columns: repeat(auto-fill, minmax(140px, 1fr)); gap: 10px; align-content: start; background: #fff; padding-bottom: 200px !important; }
         .item-card { background: #fff; border: 1px solid #eee; border-radius: 10px; padding: 10px; display: flex; flex-direction: column; justify-content: space-between; box-shadow: 0 2px 4px rgba(0,0,0,0.05); min-height: 145px; }
@@ -39,7 +40,7 @@
         .item-price { color: #e67e22; font-weight: bold; font-size: 13px; }
         
         .qty-ctrl { display: flex; align-items: center; justify-content: space-between; border-top: 1px solid #f9f9f9; padding-top: 5px; }
-        .btn-circle { width: 32px; height: 32px; border-radius: 50%; border: 1px solid #ccc; background: #fff; display: flex; align-items: center; justify-content: center; font-size: 20px; cursor: pointer; }
+        .btn-circle { width: 32px; height: 32px; border-radius: 50%; border: 1px solid #ccc; background: #fff; display: flex; align-items: center; justify-content: center; font-size: 20px; cursor: pointer; flex-shrink: 0; }
         .btn-add { background: var(--primary); color: #fff; border: none; padding: 10px 0; border-radius: 18px; font-size: 13px; font-weight: bold; flex: 1; margin-left: 8px; cursor: pointer; }
 
         /* フッター */
@@ -47,12 +48,12 @@
         .footer-history { background: #444; color: #fff; padding: 10px 15px; display: flex; justify-content: space-between; font-size: 12px; cursor: pointer; }
         .footer-cart { background: var(--secondary); color: #fff; padding: 15px 15px; display: flex; justify-content: space-between; font-weight: bold; font-size: 17px; cursor: pointer; }
 
-        /* リスト */
+        /* リスト・共通 */
         .list-container { flex: 1; overflow-y: auto; background: #fff; -webkit-overflow-scrolling: touch; }
-        .list-row { display: flex; justify-content: space-between; padding: 18px; border-bottom: 1px solid #eee; align-items: center; }
+        .list-row { display: flex; justify-content: space-between; padding: 15px; border-bottom: 1px solid #eee; align-items: center; }
         .summary-area { padding: 15px 25px; text-align: right; background: #fff; border-top: 2px solid #eee; flex-shrink: 0; line-height: 1.5; font-size: 14px; }
         .btn-large { width: 90%; display: block; margin: 8px auto; padding: 16px; border: none; border-radius: 40px; font-size: 18px; font-weight: bold; cursor: pointer; text-align: center; flex-shrink: 0; }
-        .btn-del { background: var(--danger); color: white; border: none; padding: 8px 12px; border-radius: 5px; font-size: 12px; cursor: pointer; margin-left: 10px; }
+        .btn-del { background: var(--danger); color: white; border: none; padding: 8px 10px; border-radius: 5px; font-size: 12px; cursor: pointer; margin-left: 5px; flex-shrink: 0; }
     </style>
 </head>
 <body>
@@ -78,20 +79,25 @@
 
     onSnapshot(collection(db, "tables"), (snapshot) => {
         if(window.isEditing) return;
-        const tablesList = ['C-a', 'C-b', 'C-c', '01', '02', '03', '04', '05', '06', '07', 'テイクアウト', '無人'];
+
+        const tablesList =['C-a', 'C-b', 'C-c', '01', '02', '03', '04', '05', '06', '07', 'テイクアウト', '無人'];
         const cloudIds = snapshot.docs.map(d => d.id);
+        
         tablesList.forEach(tId => {
             if(!cloudIds.includes(tId)) {
                 localStorage.removeItem('history_'+tId); localStorage.removeItem('guests_'+tId); localStorage.removeItem('checkin_'+tId);
             }
         });
+
         snapshot.forEach((doc) => {
             const tId = doc.id; const data = doc.data();
-            localStorage.setItem('history_'+tId, JSON.stringify(data.history || []));
+            localStorage.setItem('history_'+tId, JSON.stringify(data.history ||[]));
             localStorage.setItem('guests_'+tId, data.guests || 1);
             localStorage.setItem('checkin_'+tId, data.checkin || "--:--");
         });
-        renderIndex(); updateFooter();
+
+        renderIndex();
+        updateFooter();
     });
 
     window.cloudSync = async (tableId) => {
@@ -118,9 +124,8 @@
     </footer>
 </div>
 
-<!-- カート確認画面 (数量修正機能付き) -->
 <div id="view-cart" class="view">
-    <header><span class="back-btn" onclick="showMenu()">＜</span>カート確認(未送信)</header>
+    <header><span class="back-btn" onclick="showMenu()">＜</span>カート確認</header>
     <div class="list-container" id="cart-items-list"></div>
     <div style="background:#fff; border-top:1px solid #ddd; padding-bottom:10px;">
         <button class="btn-large" style="background:var(--info); color:white;" onclick="testSend()">送信(クラウド同期)</button>
@@ -147,20 +152,19 @@
 <div id="view-success" class="view" style="text-align:center; justify-content:center;"><h2>送信完了</h2><button class="btn-large" style="background:var(--primary);color:white;" onclick="showMenu()">戻る</button></div>
 
 <script>
-// --- 商品データ (198商品) ---
 const rawData = [
-    ["お通し","お通し",300],["もつ串","美唄焼鳥",150],["鳥精肉","美唄焼鳥",170],["手羽焼き（2本）","焼き物",400],["国産豚ロースステーキ","焼き物",600],["ハーフ豚ステーキ","焼き物",700],["ハーフ豚炙りチャーシュー","焼き物",600],["自家製つくねコロコロ焼き","焼き物",400],["ささみ串焼き（数量限定）","焼き物",250],["鴨肉の網焼き","焼き物",600],["ピリ辛ソーセージ","焼き物",400],["ラムソーセージ","焼き物",500],["うずらの玉子","焼き物",150],["肉厚しいたけ","焼き物",300],["プチトマト","焼き物",150],["ズッキーニ","焼き物",150],["長なす串焼き","焼き物",300],["軟白ねぎ","焼き物",300],["ししとう","焼き物",300],["にんにくカップ焼き","焼き物",500],["焼きじゃがバター","焼き物",500],["いももちバター","焼き物",400],["ささみ串（塩）","焼き物",300],["国産豚ロース（塩）","焼き物",750],["鳥もつ煮込み","一品料理",400],["特製一口ザンギ","一品料理",550],["手羽ザンギ","一品料理",550],["若鶏の皮竜田揚げ","一品料理",550],["ササミカツ","一品料理",600],["国産豚ロースカツ","一品料理",700],["コーンバターチーズ","一品料理",500],["生ハム軟白ねぎ包み","一品料理",650],["塩キャベツ","一品料理",350],["漬物","一品料理",350],["枝豆","一品料理",350],["冷奴","一品料理",400],["チャンジャ","一品料理",400],["イカの塩辛","一品料理",400],["たこわさび","一品料理",400],["松前漬け","一品料理",400],["クジラのベーコン","一品料理",700],["パンチェッタ芋熱湯風呂","オリジナル",700],["パンチェッタコーン熱湯風呂","オリジナル",700],["チャンジャチーズタパス","オリジナル",700],["ハーブ豚チャーシューアヒージョ","オリジナル",700],["砂肝アヒージョ","オリジナル",700],["タコアヒージョ","オリジナル",700],["ピリ辛ソーセージアヒージョ","オリジナル",700],["バンズ","オリジナル",100],["まぐろ刺し","刺身",700],["とろしめさば","刺身",600],["たこ頭刺し","刺身",600],["馬刺し(赤身)","刺身",800],["馬肉ユッケ","刺身",850],["エイヒレ","干物",400],["こまい一夜干し","干物",600],["ししゃも","干物",500],["鮭とば","干物",500],["するめいか","干物",450],["鳥もつ鍋","鍋物",1400],["辛鳥もつ鍋","鍋物",1500],["鴨鍋","鍋物",1300],["湯どうふ","鍋物",800],["単品野菜","鍋物",500],["単品もつ","鍋物",800],["雑炊セット","鍋物",350],["単品そば","鍋物",300],["冷しトマト","サラダ",400],["オリジナルサラダ","サラダ",600],["ツナサラダ","サラダ",700],["生ハムサラダ","サラダ",800],["もずく酢","酢の物",350],["ピクルス盛り合わせ","酢の物",550],["りめし","ご飯物",400],["やきとり丼ぶり","ご飯物",650],["もつ煮込み丼ぶり","ご飯物",650],["炙りチャーシュー丼","ご飯物",700],["特製オムライス","ご飯物",700],["山わさび丼ぶり","ご飯物",400],["ライス(小)","ご飯物",200],["ライス(大)","ご飯物",300],["鳥がらそば","麺類",450],["特製ラーメン(正油)","麺類",750],["もつそば(温)","麺類",600],["もつせいろそば(冷)","麺類",600],["鳥せいろそば(冷)","麺類",600],["冷むぎ","麺類",500],["スープ","麺類",300],["スーパードライ 〈中〉","ビール",600],["スーパードライ 〈大〉","ビール",700],["マルエフ 〈中瓶〉","ビール",700],["ラガー 〈中瓶〉","ビール",700],["ホッピー セット","ビール",600],["ホッピー焼酎","ビール",300],["ドライゼロ","ビール",500],["レモンサワー","サワー",500],["ライムサワー","サワー",500],["ウーロンハイ","サワー",500],["生レモンサワー","サワー",600],["グラスワイン","ワイン",500],["焼酎(ロック/水割)","焼酎",500],["黒霧島","焼酎",700],["中々","焼酎",700],["よろしく千萬","焼酎",700],["金黒","焼酎",700],["カシスオレンジ","カクテル",550],["ジントニック","カクテル",550],["ウーロン茶","ソフトドリンク",350],["コーラ","ソフトドリンク",350],["カルピス","ソフトドリンク",350],["緑茶","ソフトドリンク",350],["二世古","日本酒",850],["繁桝","日本酒",900],["福司","日本酒",850],["まる田","日本酒",900],["男山","日本酒",900],["獺祭","日本酒",900],["十一州","日本酒",900],["久保田","日本酒",850],["一ノ蔵","日本酒",800],["北の勝","日本酒",800],["八海山","日本酒",800],["もつ串（持帰）","テイクアウト",150],["精肉（持帰）","テイクアウト",170],["もつ煮（持帰）","テイクアウト",300],["飲み放題男性","飲み放題",2280],["飲み放題女性","飲み放題",1980],["もつ串10本","無人",1000],["精肉10本","無人",1000],["MIX10本","無人",1000],["弁当A","無人",1000],["弁当B","無人",1000]
+    ["お通し","お通し",300],["もつ串","美唄焼鳥",150],["鳥精肉","美唄焼鳥",170],["手羽焼き（2本）","焼き物",400],["国産豚ロースステーキ","焼き物",600],["ハーフ豚ステーキ","焼き物",700],["ハーフ豚炙りチャーシュー","焼き物",600],["自家製つくねコロコロ焼き","焼き物",400],["ささみ串焼き（数量限定）","焼き物",250],["鴨肉の網焼き","焼き物",600],["ピリ辛ソーセージ","焼き物",400],["ラムソーセージ","焼き物",500],["うずらの玉子","焼き物",150],["肉厚しいたけ","焼き物",300],["プチトマト","焼き物",150],["ズッキーニ","焼き物",150],["長なす串焼き","焼き物",300],["軟白ねぎ","焼き物",300],["ししとう","焼き物",300],["にんにくカップ焼き","焼き物",500],["焼きじゃがバター","焼き物",500],["いももちバター","焼き物",400],["ささみ串（塩こうじ）","焼き物",300],["国産豚ロース（塩こうじ）","焼き物",750],["鳥もつ煮込み","一品料理",400],["特製一口ザンギ","一品料理",550],["手羽ザンギ","一品料理",550],["若鶏の皮竜田揚げ","一品料理",550],["ササミカツ","一品料理",600],["国産豚ロースカツ","一品料理",700],["コーンバターチーズ","一品料理",500],["生ハム軟白ねぎ包み","一品料理",650],["塩キャベツ","一品料理",350],["漬物","一品料理",350],["枝豆","一品料理",350],["冷奴","一品料理",400],["チャンジャ","一品料理",400],["イカの塩辛","一品料理",400],["たこわさび","一品料理",400],["松前漬け","一品料理",400],["クジラのベーコン","一品料理",700],["パンチェッタ芋熱湯風呂","オリジナル",700],["パンチェッタコーン熱湯風呂","オリジナル",700],["チャンジャチーズタパス","オリジナル",700],["ハーブ豚チャーシューアヒージョ","オリジナル",700],["砂肝アヒージョ","オリジナル",700],["タコアヒージョ","オリジナル",700],["ピリ辛ソーセージアヒージョ","オリジナル",700],["バンズ","オリジナル",100],["まぐろ刺し","刺身",700],["とろしめさば","刺身",600],["たこ頭刺し","刺身",600],["馬刺し(赤身)","刺身",800],["馬肉ユッケ","刺身",850],["エイヒレ","干物",400],["こまい一夜干し","干物",600],["ししゃも","干物",500],["鮭とば","干物",500],["するめいか","干物",450],["鳥もつ鍋","鍋物",1400],["辛鳥もつ鍋","鍋物",1500],["鴨鍋","鍋物",1300],["湯どうふ","鍋物",800],["単品野菜","鍋物",500],["単品もつ","鍋物",800],["雑炊セット","鍋物",350],["単品そば","鍋物",300],["冷しトマト","サラダ",400],["オリジナルサラダ","サラダ",600],["ツナサラダ","サラダ",700],["生ハムサラダ","サラダ",800],["もずく酢","酢の物",350],["ピクルス盛り合わせ","酢の物",550],["りめし","ご飯物",400],["やきとり丼ぶり","ご飯物",650],["もつ煮込み丼ぶり","ご飯物",650],["炙りチャーシュー丼","ご飯物",700],["特製オムライス","ご飯物",700],["山わさび丼ぶり","ご飯物",400],["ライス(小)","ご飯物",200],["ライス(大)","ご飯物",300],["鳥がらそば","麺類",450],["特製ラーメン(正油)","麺類",750],["もつそば(温)","麺類",600],["もつせいろそば(冷)","麺類",600],["鳥せいろそば(冷)","麺類",600],["冷むぎ","麺類",500],["スープ","麺類",300],["スーパードライ 〈中〉","ビール",600],["スーパードライ 〈大〉","ビール",700],["マルエフ 〈中瓶〉","ビール",700],["ラガー 〈中瓶〉","ビール",700],["ホッピー セット","ビール",600],["ホッピーの焼酎のみ","ビール",300],["ドライゼロ","ビール",500],["レモンサワー","サワー",500],["ライムサワー","サワー",500],["ウーロンハイ","サワー",500],["生レモンサワー","サワー",600],["グラスワイン","ワイン",500],["焼酎(水割/ロック)","焼酎",500],["黒霧島","焼酎",700],["中々","焼酎",700],["よろしく千萬","焼酎",700],["金黒","焼酎",700],["カシスオレンジ","カクテル",550],["ジントニック","カクテル",550],["ウーロン茶","ソフトドリンク",350],["コーラ","ソフトドリンク",350],["カルピス","ソフトドリンク",350],["緑茶","ソフトドリンク",350],["二世古","日本酒",850],["繁桝","日本酒",900],["福司","日本酒",850],["まる田","日本酒",900],["男山","日本酒",900],["獺祭","日本酒",900],["十一州","日本酒",900],["久保田","日本酒",850],["一ノ蔵","日本酒",800],["北の勝","日本酒",800],["八海山","日本酒",800],["もつ串（持帰）","テイクアウト",150],["精肉（持帰）","テイクアウト",170],["もつ煮（持帰）","テイクアウト",300],["飲み放題男性","飲み放題",2280],["飲み放題女性","飲み放題",1980],["もつ串10本","無人",1000],["精肉10本","無人",1000],["MIX10本","無人",1000],["弁当A","無人",1000],["弁当B","無人",1000]
 ];
 
-const menuData = [];
+const menuData =[];
 rawData.forEach(r => {
     let c = menuData.find(x => x.cat === r[1]);
     if(!c) { c = {cat: r[1], items: []}; menuData.push(c); }
     c.items.push({n: r[0], p: r[2]});
 });
 
-const tables = ['C-a', 'C-b', 'C-c', '01', '02', '03', '04', '05', '06', '07', 'テイクアウト', '無人'];
-let currentTable = "", currentCart = [], tempGuestCount = "1";
+const tables =['C-a', 'C-b', 'C-c', '01', '02', '03', '04', '05', '06', '07', 'テイクアウト', '無人'];
+let currentTable = "", currentCart =[], tempGuestCount = "1";
 const PRINTER_URL = 'http://192.168.1.XX/StarWebPRNT/SendMessage';
 
 function hideAll() { document.querySelectorAll('.view').forEach(v => v.style.display = 'none'); }
@@ -173,7 +177,7 @@ function showGuestInput() {
     document.getElementById('guest-count-val').innerText = tempGuestCount;
     document.getElementById('view-guest').style.display = 'flex';
     const keypad = document.getElementById('guest-keypad');
-    keypad.innerHTML = [1,2,3,4,5,6,7,8,9,'C',0,'決定'].map(k => {
+    keypad.innerHTML =[1,2,3,4,5,6,7,8,9,'C',0,'決定'].map(k => {
         let style = k === '決定' ? 'background:var(--accent); color:#fff;' : '';
         let func = k === '決定' ? 'confirmGuestCount()' : (k === 'C' ? 'clearGuestNum()' : `inputGuestNum(${k})`);
         return `<button class="key-btn" style="${style}" onclick="${func}">${k}</button>`;
@@ -235,7 +239,7 @@ function addToCart(name, price, qId, rate) {
 
 function removeFromCart(idx) { currentCart.splice(idx, 1); localStorage.setItem('cart_'+currentTable, JSON.stringify(currentCart)); showCart(); updateFooter(); }
 
-// ★ カート内商品の数量変更機能
+// ★ カート画面用の数量変更関数
 function changeCartQty(idx, delta) {
     currentCart[idx].qty += delta;
     if(currentCart[idx].qty < 1) currentCart[idx].qty = 1;
@@ -247,20 +251,21 @@ function showCart() {
     hideAll(); document.getElementById('view-cart').style.display = 'flex';
     document.getElementById('cart-items-list').innerHTML = currentCart.map((i, idx) => `
         <div class="list-row">
-            <div style="flex:1;"><b>${i.name}</b><br><small>¥${i.price.toLocaleString()} x ${i.qty}</small></div>
-            <div style="display:flex; align-items:center; gap:10px;">
+            <div style="flex:1;"><b>${i.name}</b><br><small style="color:#666;">¥${i.price.toLocaleString()} x ${i.qty}</small></div>
+            <div style="display:flex; align-items:center; gap:8px; flex-shrink:0;">
                 <div class="btn-circle" onclick="changeCartQty(${idx}, -1)">-</div>
-                <span style="font-weight:bold; min-width:20px; text-align:center;">${i.qty}</span>
+                <span style="font-weight:bold; min-width:24px; text-align:center;">${i.qty}</span>
                 <div class="btn-circle" onclick="changeCartQty(${idx}, 1)">+</div>
                 <button class="btn-del" onclick="removeFromCart(${idx})">削除</button>
             </div>
-        </div>`).join('') || '<p style="text-align:center;padding:50px;">空です</p>';
+        </div>`).join('') || '<p style="text-align:center;padding:50px;color:#999;">カートは空です</p>';
 }
 
+// ★ 履歴修正画面用の数量変更関数
 function changeHistoryQty(idx, delta) {
     const hist = JSON.parse(localStorage.getItem('history_'+currentTable) || '[]');
     hist[idx].qty += delta;
-    if(hist[idx].qty <= 0) { if(!confirm("削除しますか？")) return; hist.splice(idx, 1); }
+    if(hist[idx].qty <= 0) { if(!confirm("履歴から削除しますか？")) return; hist.splice(idx, 1); }
     localStorage.setItem('history_'+currentTable, JSON.stringify(hist));
     renderHistoryUI();
 }
@@ -281,13 +286,13 @@ function renderHistoryUI() {
 
 async function confirmHistoryChange() {
     if(window.cloudSync) await window.cloudSync(currentTable);
-    alert("保存しました。");
+    alert("数量変更を保存しました。");
 }
 
 function exitHistory() { window.isEditing = false; showMenu(); }
 
 function showOrderHistory() {
-    window.isEditing = true;
+    window.isEditing = true; // 修正モード開始
     hideAll(); document.getElementById('view-history').style.display = 'flex';
     renderHistoryUI();
 }
@@ -304,7 +309,7 @@ function updateFooter() { document.getElementById('cart-count').innerText = curr
 async function testSend() {
     if(currentCart.length === 0) return alert("空です");
     const hist = JSON.parse(localStorage.getItem('history_'+currentTable) || '[]');
-    localStorage.setItem('history_'+currentTable, JSON.stringify(hist.concat(currentCart))); localStorage.removeItem('cart_'+currentTable); currentCart = [];
+    localStorage.setItem('history_'+currentTable, JSON.stringify(hist.concat(currentCart))); localStorage.removeItem('cart_'+currentTable); currentCart =[];
     if(window.cloudSync) await window.cloudSync(currentTable); hideAll(); document.getElementById('view-success').style.display = 'flex'; updateFooter();
 }
 async function testPay() { if(window.cloudDelete) await window.cloudDelete(currentTable); showIndex(); }
@@ -318,24 +323,11 @@ async function sendToKitchen() {
     const trader = new StarWebPrintTrader({url: PRINTER_URL});
     trader.onReceive = async () => {
         const hist = JSON.parse(localStorage.getItem('history_'+currentTable) || '[]');
-        localStorage.setItem('history_'+currentTable, JSON.stringify(hist.concat(currentCart))); localStorage.removeItem('cart_'+currentTable); currentCart = [];
+        localStorage.setItem('history_'+currentTable, JSON.stringify(hist.concat(currentCart))); localStorage.removeItem('cart_'+currentTable); currentCart =[];
         if(window.cloudSync) await window.cloudSync(currentTable); hideAll(); document.getElementById('view-success').style.display = 'flex'; updateFooter();
     };
     trader.sendMessage({request: request});
 }
 
 async function pay() {
-    const hist = JSON.parse(localStorage.getItem('history_'+currentTable) || '[]');
-    const builder = new StarWebPrintBuilder(); let request = builder.createInitializationElement();
-    let sub = 0, tx = 0; request += builder.createTextElement({data: `== お会計 ${currentTable}番 ==\n`});
-    hist.forEach(i => { const line = i.price*i.qty; sub += line; tx += Math.floor(line*i.rate); request += builder.createTextElement({data: `${i.name} x ${i.qty} ¥${line}\n`}); });
-    request += builder.createTextElement({data: `\n合計: ¥${sub+tx}\n`, width:2, height:2});
-    request += builder.createPeripheralElement({channel: 1, pulse: 200}); request += builder.createCutPaperElement({type: 'partial'});
-    const trader = new StarWebPrintTrader({url: PRINTER_URL});
-    trader.onReceive = async () => { if(window.cloudDelete) await window.cloudDelete(currentTable); showIndex(); };
-    trader.sendMessage({request: request});
-}
-showIndex();
-</script>
-</body>
-</html>
+    const hist = JSON.parse(localStorage.getItem('history_'+currentTable) || '
