--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         .keypad { display: grid; grid-template-columns: repeat(3, 1fr); gap: 15px; width: 100%; max-width: 450px; margin: 0 auto; }
         .key-btn { background: #fff; border: 1px solid #ddd; padding: 25px 0; font-size: 32px; font-weight: bold; border-radius: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); cursor: pointer; }
         .menu-container { display: flex; flex: 1; overflow: hidden; }
-        .sidebar { width: 105px; background: #f0f0f0; overflow-y: auto; border-right: 1px solid #ddd; flex-shrink: 0; box-sizing: border-box; padding-bottom: 150px !important; }
+        .sidebar { width: 105px; background: #f0f0f0; overflow-y: auto; border-right: 1px solid #ddd; flex-shrink: 0; box-sizing: border-box; padding-bottom: 100px !important; }
         .cat { padding: 20px 8px; font-size: 13px; text-align: center; border-bottom: 1px solid #ddd; cursor: pointer; color: #555; line-height: 1.4; }
         .cat.active { background: #fff; color: var(--primary); font-weight: bold; border-left: 6px solid var(--primary); }
         .item-grid { flex: 1; overflow-y: auto; padding: 10px; display: grid; grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); gap: 12px; align-content: start; background: #fff; padding-bottom: 150px !important; }
@@ -46,8 +46,6 @@
         .list-row { display: flex; justify-content: space-between; padding: 18px; border-bottom: 1px solid #eee; align-items: center; }
         .summary-area { padding: 15px 25px; text-align: right; background: #fff; border-top: 2px solid #eee; flex-shrink: 0; line-height: 1.6; font-size: 15px; }
         .btn-large { width: 90%; display: block; margin: 10px auto; padding: 20px; border: none; border-radius: 40px; font-size: 20px; font-weight: bold; cursor: pointer; text-align: center; flex-shrink: 0; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
-
-        /* 売上管理 */
         .admin-nav { display: flex; background: #fff; border-bottom: 1px solid #ddd; }
         .admin-nav-btn { flex: 1; padding: 15px; text-align: center; font-size: 14px; font-weight: bold; color: #888; cursor: pointer; border-bottom: 3px solid transparent; }
         .admin-nav-btn.active { color: var(--primary); border-bottom-color: var(--primary); }
@@ -141,7 +139,13 @@
         });
     };
 
+    // 保存処理（ログイン時のみ実行されるように修正）
     window.saveSaleToCloud = async (tableId) => {
+        if(!window.currentUser) {
+            console.log("非ログイン：クラウド保存スキップ");
+            await deleteDoc(doc(db, "tables", tableId));
+            return;
+        }
         const hist = JSON.parse(localStorage.getItem('history_' + tableId) || '[]');
         if(hist.length === 0) return;
         const guests = parseInt(localStorage.getItem('guests_' + tableId)) || 0;
@@ -230,20 +234,18 @@
 const rawData = [["お通し", "全メニュー", 300], ["もつ串", "美唄焼鳥", 150], ["鳥精肉", "美唄焼鳥", 170], ["手羽焼き（2本）", "焼き物", 400], ["国産豚のロース網焼きステーキ", "焼き物", 600], ["ハーフ豚の網焼きステーキ（1枚）", "焼き物", 700], ["ハーフ豚の炙りチャーシュー", "焼き物", 600], ["自家製つくねのコロコロ焼き（4玉）", "焼き物", 400], ["ささみ串焼き（数量限定 1串）", "焼き物", 250], ["鴨肉の網焼き", "焼き物", 600], ["ピリ辛ソーセージ（2本）", "焼き物", 400], ["ラムソーセージ（2本）", "焼き物", 500], ["うずらの玉子（1串）", "焼き物", 150], ["肉厚しいたけ（2個）", "焼き物", 300], ["プチトマト（1串）", "焼き物", 150], ["ズッキーニ（1串）", "焼き物", 150], ["長なす串焼き（1串）", "焼き物", 300], ["軟白ねぎ（1串）", "焼き物", 300], ["ししとう（2串）", "焼き物", 300], ["オリーブオイルにんにくカップ焼き", "焼き物", 500], ["焼きじゃがバター（2個）", "焼き物", 500], ["焼きじゃがバター（塩辛付き）（2個）", "焼き物", 600], ["いももちバター（4個）", "焼き物", 400], ["ささみ串（自家製塩こうじ漬け）", "焼き物", 300], ["国産豚のロース網焼きステーキ（自家製塩こうじ漬け）", "焼き物", 750], ["鳥もつ煮込み", "一品料理", 400], ["特製一口ザンギ", "一品料理", 550], ["手羽ザンギ(3本)", "一品料理", 550], ["若鶏の皮竜田揚げ(おろしポン酢付き)", "一品料理", 550], ["ササミカツ(2枚)", "一品料理", 600], ["国産豚のロースカツ", "一品料理", 700], ["コーンバター・チーズカップ", "一品料理", 500], ["生ハムの軟白ねぎ包み(岩塩付き)", "一品料理", 650], ["塩キャベツ", "一品料理", 350], ["漬物", "一品料理", 350], ["枝豆", "一品料理", 350], ["冷奴", "一品料理", 400], ["山わさび冷奴", "一品料理", 400], ["なめこおろし", "一品料理", 400], ["カニみそとうふ", "一品料理", 400], ["チャンジャ", "一品料理", 400], ["イカの塩辛", "一品料理", 400], ["たこわさび", "一品料理", 400], ["ほたてわさび", "一品料理", 400], ["数の子入り松前漬け", "一品料理", 400], ["クジラのベーコン ねぎ正油あえ", "一品料理", 700], ["自家製パンチェッタとメークインのオリーブオイル・チーズ熱湯風呂", "オリジナル", 700], ["自家製パンチェッタとコーンのオリーブオイル・チーズ熱湯風呂", "オリジナル", 700], ["チャンジャとクリームチーズのタパス(おつまみ料理)", "オリジナル", 700], ["ハーブ豚チャーシューとマッシュルームのアヒージョ", "オリジナル", 700], ["砂肝とマッシュルームのアヒージョ", "オリジナル", 700], ["タコとマッシュルームのアヒージョ", "オリジナル", 700], ["ピリ辛ソーセージとマッシュルームのアヒージョ", "オリジナル", 700], ["バンズ", "オリジナル", 100], ["まぐろ刺し(数量限定)", "刺身", 700], ["とろしめさば", "刺身", 600], ["たこ頭刺し", "刺身", 600], ["馬刺し(赤身)", "刺身", 800], ["馬肉ユッケ", "刺身", 850], ["エイヒレ", "干物", 400], ["こまい一夜干し", "干物", 600], ["ししゃも", "干物", 500], ["鮭とば", "干物", 500], ["するめいか", "干物", 450], ["たらこ焼き", "干物", 450], ["鳥もつ鍋(一人前)", "鍋物", 1400], ["辛鳥もつ鍋(一人前)", "鍋物", 1500], ["鴨鍋(一人前)", "鍋物", 1300], ["湯どうふ(一人前)", "鍋物", 800], ["【追加】単品野菜", "鍋物", 500], ["【追加】単品もつ類", "鍋物", 800], ["【追加】雑炊セット", "鍋物", 350], ["【追加】単品そば", "鍋物", 300], ["冷しトマト", "サラダ", 400], ["オリジナルサラダ", "サラダ", 600], ["ツナサラダ", "サラダ", 700], ["生ハムサラダ", "サラダ", 800], ["もずく酢", "酢の物", 350], ["ピクルスの盛り合わせ", "酢の物", 550], ["美唄名物とりめし", "ご飯物", 400], ["やきとり丼ぶり", "ご飯物", 650], ["もつ煮込み丼ぶり", "ご飯物", 650], ["炙りチャーシュー丼ぶり", "ご飯物", 700], ["三船特製オムライス", "ご飯物", 700], ["山わさび丼ぶり", "ご飯物", 400], ["ライス(小)", "ご飯物", 200], ["ライス(大)", "ご飯物", 300], ["三船名物鳥がらそば", "麺類", 450], ["三船特製ラーメン(正油味のみ)", "麺類", 750], ["三船特製チャーシューメン", "麺類", 900], ["バターコーンラーメン", "麺類", 900], ["もつそば(温)", "麺類", 600], ["もつせいろそば(冷)", "麺類", 600], ["鳥せいろそば(冷)", "麺類", 600], ["かしわそば(温)", "麺類", 600], ["冷むぎ(夏期)", "麺類", 500], ["スープ(玉子・わかめ)", "麺類", 300], ["飲み放題延長", "飲み放題", 800], ["スーパードライ 〈小〉", "ビール", 500], ["スーパードライ 〈中〉", "ビール", 600], ["スーパードライ 〈大〉", "ビール", 700], ["アサヒ マルエフ 〈中瓶〉", "ビール", 700], ["ラガー 〈中瓶〉", "ビール", 700], ["ホッピー セット〈白・黒〉", "ビール", 600], ["ホッピーの焼酎のみ", "ビール", 300], ["アサヒドライゼロ 〈中瓶〉", "ビール", 500], ["ソラチエース", "ビール", 800], ["プレーンサワー", "サワー", 500], ["レモンサワー", "サワー", 500], ["ライムサワー", "サワー", 500], ["カシスサワー", "サワー", 500], ["梅サワー", "サワー", 500], ["グレープフルーツサワー", "サワー", 500], ["ぶどうサワー", "サワー", 500], ["青りんごサワー", "サワー", 500], ["カルピスサワー", "サワー", 500], ["シークァーサーサワー", "サワー", 500], ["ウーロンハイ", "サワー", 500], ["緑茶ハイ", "サワー", 500], ["コーヒー酎ハイ", "サワー", 500], ["生レモンサワー", "サワー", 600], ["生グレープフルーツサワー", "サワー", 600], ["グラスワイン（赤）", "ワイン", 500], ["グラスワイン（白）", "ワイン", 500], ["焼酎（ロック・水割り）", "焼酎", 500], ["㐂六（きろく） 〈宮崎・芋〉", "焼酎", 700], ["山ねこ 〈宮崎・芋〉", "焼酎", 700], ["山せみ 〈宮崎・米〉", "焼酎", 700], ["山猿 〈宮崎・麦〉", "焼酎", 700], ["中々 〈宮崎・麦〉", "焼酎", 700], ["黒霧島 〈宮崎・芋〉", "焼酎", 700], ["海 〈鹿児島・芋〉", "焼酎", 700], ["くじら 〈鹿児島・芋〉", "焼酎", 700], ["よろしく千萬あるべし 〈新潟・米〉", "焼酎", 700], ["ニッカ・ザ・麦焼酎 〈福岡・麦〉", "焼酎", 700], ["金黒 〈福岡・芋〉", "焼酎", 700], ["カシスソーダ", "カクテル", 550], ["カシスウーロン", "カクテル", 550], ["カシスオレンジ", "カクテル", 550], ["カシスグレープフルーツ", "カクテル", 550], ["カンパリオレンジ", "カクテル", 550], ["カンパリソーダ", "カクテル", 550], ["カンパリトニック", "カクテル", 550], ["ジントニック", "カクテル", 550], ["ジンライム", "カクテル", 550], ["ラムコーク", "カクテル", 550], ["ワインクーラー", "カクテル", 550], ["クーニャン", "カクテル", 550], ["ファジーネーブル", "カクテル", 550], ["シャンディガフ", "カクテル", 550], ["レッドアイ", "カクテル", 550], ["ブラッディメアリー", "カクテル", 550], ["スクリュードライバー", "カクテル", 550], ["ブルドック", "カクテル", 550], ["モスコミュール", "カクテル", 550], ["ウーロン茶", "ソフトドリンク", 350], ["ほうじ茶", "ソフトドリンク", 350], ["コーラ", "ソフトドリンク", 350], ["オレンジジュース", "ソフトドリンク", 350], ["グレープフルーツジュース", "ソフトドリンク", 350], ["カルピス", "ソフトドリンク", 350], ["カルピスソーダ", "ソフトドリンク", 350], ["トマトジュース", "ソフトドリンク", 350], ["アイスコーヒー", "ソフトドリンク", 350], ["緑茶", "ソフトドリンク", 350], ["ジンジャーエール", "ソフトドリンク", 350], ["アイスクリーム（バニラ）", "デザート", 350], ["コーラフロート", "デザート", 600], ["コーヒーフロート", "デザート", 600], ["二世古（特別純米新酒しぼり）", "日本酒", 850], ["繁桝（特別純米生々）", "日本酒", 900], ["福司（純米酒）", "日本酒", 850], ["まる田（特別純米）", "日本酒", 900], ["男山（純米生酒）", "日本酒", 900], ["獺祭（純米大吟醸）", "日本酒", 900], ["十一州（吟醸しぼりたて）", "日本酒", 900], ["久保田（清酒）", "日本酒", 850], ["一ノ蔵（本醸造辛口）", "日本酒", 800], ["ばくれん（吟醸超辛口）", "日本酒", 800], ["くどき上手（純米吟醸辛口）", "日本酒", 900], ["北の勝（清酒）", "日本酒", 800], ["越後で候（しぼりたて生原酒）", "日本酒", 900], ["李白（特別純米酒）", "日本酒", 850], ["常山（とびっきり辛口）", "日本酒", 900], ["開運（無濾過純米酒）", "日本酒", 900], ["大和しずく（純米吟醸）", "日本酒", 900], ["越乃寒梅（清酒）", "日本酒", 800], ["八海山（清酒）", "日本酒", 800], ["もつ串 テイクアウト", "テイクアウト", 150], ["精肉 テイクアウト", "テイクアウト", 170], ["もつ煮込み テイクアウト", "テイクアウト", 300], ["もつ串10本", "無人", 1000], ["鳥精肉10本", "無人", 1000], ["もつ、精肉 MIX 10本", "無人", 1000], ["弁当A", "無人", 1000], ["弁当B", "無人", 1000], ["飲み放題男性90分", "飲み放題", 2280], ["飲み放題女性90分", "飲み放題", 1980]];
 
 const menuData = [];
-// 「全メニュー」カテゴリーを最初に作成し、全商品を突っ込む
 const allCat = { cat: "全メニュー", items: [] };
 rawData.forEach(r => {
-    allCat.items.push({n: r[0], p: r[2], c: r[1]}); // 全メニュー用
+    allCat.items.push({n: r[0], p: r[2], c: r[1]});
     let c = menuData.find(x => x.cat === r[1]);
     if(!c) { c = {cat: r[1], items: []}; menuData.push(c); }
     c.items.push({n: r[0], p: r[2]});
 });
-menuData.unshift(allCat); // 全メニューを先頭に
+menuData.unshift(allCat);
 
 const tablesL = ['C-a', 'C-b', 'C-c', '01', '02', '03', '04', '05', '06', '07', 'テイクアウト', '無人'];
 let currentTable = "", currentCart = [], tempGuestCount = "0";
 const PRINTER_URL = 'http://192.168.1.XX/StarWebPRNT/SendMessage';
-const isTestMode = true;
 
 function hideAll() { document.querySelectorAll('.view').forEach(v => v.style.display = 'none'); }
 function renderIndex() { const g = document.getElementById('table-grid'); if(!g) return; g.innerHTML = tablesL.map(t => { const h = JSON.parse(localStorage.getItem('history_'+t) || '[]'); const total = h.reduce((s, i) => s + Math.floor(i.price*i.qty*(1+i.rate)), 0); return `<div class="table-btn ${total>0?'occupied':''}" onclick="onTableClick('${t}')"><b>${t}</b><span class="price-badge">${total>0?'¥'+total.toLocaleString():'空席'}</span></div>`; }).join(''); }
@@ -273,21 +275,11 @@ async function showAdmin(mode) {
             const dowLabels = ['日', '月', '火', '水', '木', '金', '土'];
             let stats = [0,1,2,3,4,5,6].map(i => ({ label: dowLabels[i], total: 0, count: 0, guests: 0 }));
             sales.forEach(s => { const d = s.timestamp.toDate(); const dow = d.getDay(); stats[dow].total += s.total; stats[dow].count++; stats[dow].guests += s.guests; total += s.total; guests += s.guests; });
-            list.innerHTML = stats.map(s => `
-                <div class="sale-card" style="border-left-color: ${s.label === '日' ? 'red' : (s.label === '土' ? 'blue' : '#ccc')};">
-                    <div class="sale-time-row"><span class="sale-time">${s.label}曜日</span></div>
-                    <div class="sale-detail-info">件数: ${s.count} / 客数: ${s.guests}</div>
-                    <div class="sale-total-line"><span class="sale-price-big">¥${s.total.toLocaleString()}</span></div>
-                </div>`).join('');
+            list.innerHTML = stats.map(s => `<div class="sale-card"><b>${s.label}曜日</b><br><div style="font-size:18px; color:var(--primary);">¥${s.total.toLocaleString()}</div></div>`).join('');
         } else if (mode === 'month') {
             let mStats = Array(12).fill(0).map((_, i) => ({ label: (i+1) + '月', total: 0, count: 0, guests: 0 }));
             sales.forEach(s => { const m = s.timestamp.toDate().getMonth(); mStats[m].total += s.total; mStats[m].count++; mStats[m].guests += s.guests; total += s.total; guests += s.guests; });
-            list.innerHTML = mStats.filter(s => s.count > 0).reverse().map(s => `
-                <div class="sale-card">
-                    <div class="sale-time-row"><span class="sale-time">${s.label}</span></div>
-                    <div class="sale-detail-info">件数: ${s.count} / 客数: ${s.guests}</div>
-                    <div class="sale-total-line"><span class="sale-price-big">¥${s.total.toLocaleString()}</span></div>
-                </div>`).join('');
+            list.innerHTML = mStats.filter(s => s.count > 0).reverse().map(s => `<div class="sale-card"><b>${s.label}</b><br><div style="font-size:18px; color:var(--primary);">¥${s.total.toLocaleString()}</div></div>`).join('');
         }
         document.getElementById('sum-total').innerText = total.toLocaleString();
         document.getElementById('sum-guests').innerText = guests;
@@ -306,7 +298,7 @@ async function printReport(mode) {
     const t = new StarWebPrintTrader({url: PRINTER_URL}); t.sendMessage({request: r});
 }
 
-function showGuestInput() { hideAll(); tempGuestCount = "0"; document.getElementById('guest-table-name').innerText = currentTable + "番席"; document.getElementById('guest-count-val').innerText = tempGuestCount; document.getElementById('view-guest').style.display = 'flex'; const k = document.getElementById('guest-keypad'); k.innerHTML = [1,2,3,4,5,6,7,8,9,'C',0,'決定'].map(num => { let s = num === '決定' ? 'background:var(--accent); color:#fff;' : ''; let f = num === '決定' ? 'confirmGuestCount()' : (num === 'C' ? 'clearGuestNum()' : `inputGuestNum(${num})`); return `<button class="key-btn" style="${s}" onclick="${f}">${num}</button>`; }).join(''); }
+function showGuestInput() { hideAll(); tempGuestCount = "0"; document.getElementById('guest-table-name').innerText = currentTable + "番席"; document.getElementById('guest-count-val').innerText = tempGuestCount; document.getElementById('view-guest').style.display = 'flex'; const k = document.getElementById('guest-keypad'); k.innerHTML = [1,2,3,4,5,6,7,8,9,'C',0,'決定'].map(num => `<button class="key-btn" onclick="${num === '決定' ? 'confirmGuestCount()' : (num === 'C' ? 'clearGuestNum()' : `inputGuestNum(${num})`)}">${num}</button>`).join(''); }
 function inputGuestNum(n) { if(tempGuestCount === "0") tempGuestCount = n.toString(); else if(tempGuestCount.length < 2) tempGuestCount += n.toString(); document.getElementById('guest-count-val').innerText = tempGuestCount; }
 function clearGuestNum() { tempGuestCount = "0"; document.getElementById('guest-count-val').innerText = tempGuestCount; }
 async function confirmGuestCount() { let c = parseInt(tempGuestCount); if(c < 1) return alert("人数を入力"); localStorage.setItem('guests_' + currentTable, c); const now = new Date(); localStorage.setItem('checkin_' + currentTable, now.getHours().toString().padStart(2, '0') + ":" + now.getMinutes().toString().padStart(2, '0')); if(window.cloudSync) await window.cloudSync(currentTable); showMenu(); }
@@ -324,7 +316,6 @@ function changeCat(el, idx) { document.querySelectorAll('.cat').forEach(c => c.c
 function renderItems(category) { 
     const container = document.getElementById('display-items'); 
     container.innerHTML = category.items.map((item, idx) => {
-        // テイクアウト・無人カテゴリー、または全メニュー内のそれらの商品は8%
         const rate = (category.cat === "テイクアウト" || category.cat === "無人" || item.c === "テイクアウト" || item.c === "無人") ? 0.08 : 0.10;
         const taxInc = Math.floor(item.p * (1 + rate));
         return `<div class="item-card"><div class="item-info"><span class="item-name">${item.n}</span><span class="item-price">¥${item.p.toLocaleString()} <small style="font-size:10px; color:#999;">(税込¥${taxInc.toLocaleString()})</small></span></div><div class="qty-ctrl"><div class="btn-circle" onclick="changeQty('q${idx}', -1)">-</div><span id="q${idx}" style="font-weight:bold; min-width:18px; text-align:center;">1</span><div class="btn-circle" onclick="changeQty('q${idx}', 1)">+</div><button class="btn-add" onclick="addToCart('${item.n}', ${item.p}, 'q${idx}', ${rate})">追加</button></div></div>`;
@@ -388,7 +379,13 @@ async function pay(doPrint) {
         r += b.createTextElement({data: `--------------------------------\n`}); r += b.createAlignmentElement({position: 'right'}); r += b.createTextElement({data: `税込合計: ¥${(sub + tx).toLocaleString()}\n`, width: 2, height: 2});
         r += b.createAlignmentElement({position: 'center'}); r += b.createTextElement({data: `\n[登録番号] T4430001061003\n株式会社Stag Beetle Corporation\n\n`}); r += b.createCutPaperElement({type: 'partial'});
     }
-    const t = new StarWebPrintTrader({url: PRINTER_URL}); t.onReceive = async () => { if(window.saveSaleToCloud) await window.saveSaleToCloud(currentTable); showIndex(); }; t.sendMessage({request: r});
+    const t = new StarWebPrintTrader({url: PRINTER_URL}); 
+    t.onReceive = async () => { 
+        // ログイン時のみクラウド保存、非ログイン時はローカル削除のみ実行
+        await window.saveSaleToCloud(currentTable); 
+        showIndex(); 
+    }; 
+    t.sendMessage({request: r});
 }
 window.onload = () => { renderIndex(); };
 </script>
