--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
 <title>三船 リアルタイムPOS</title>
-<script src="StarWebPrintBuilder.js"></script>
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <script src="StarWebPrintBuilder.js"></script>
 <script src="StarWebPrintTrader.js"></script>
 <style>
 :root { --primary: #f39c12; --secondary: #fbb03b; --bg: #f8f8f8; --text: #333; --accent: #2ecc71; --gray: #999; --danger: #e74c3c; --info: #3498db; --dark: #444; }
