--- a/index.html
+++ b/index.html
@@ -213,10 +213,18 @@ window.cloudDelete = async (tableId) => { await deleteDoc(doc(db, "tables", tabl
 <script>
 // --- 商品データ ---
 const rawData = [
+　　// お通し
+    ["お通し", "お通し", 300],
+
     // 美唄焼鳥
     ["もつ串", "美唄焼鳥", 150],
     ["鳥精肉", "美唄焼鳥", 170],
     
+    // 飲み放題
+    ["飲み放題男", "飲み放題", 2280],
+    ["飲み放題女", "飲み放題", 1980],
+    ["飲み放題延長", "飲み放題", 800],
+        
     // 焼き物
     ["手羽焼き(2本)", "焼き物", 400],
     ["豚のロース網焼きステーキ", "焼き物", 600],
@@ -354,7 +362,7 @@ const rawData = [
 
     // 焼酎
     ["焼酎ロック/水割", "焼酎", 500],
-    ["喜六", "焼酎", 700], // 㐂六 -> 喜六 に修正
+    ["㐂六", "焼酎", 700], // 㐂六 -> 喜六 に修正
     ["山ねこ", "焼酎", 700],
     ["中々", "焼酎", 700],
     ["黒霧島", "焼酎", 700],
@@ -388,14 +396,6 @@ const rawData = [
     ["大和しずく", "日本酒", 900],
     ["越乃寒梅", "日本酒", 800],
     ["八海山", "日本酒", 800],
-
-    // その他
-    ["お通し", "その他", 300],
-
-    // 飲み放題
-    ["飲み放題延長", "飲み放題", 800],
-    ["飲み放題男", "飲み放題", 2280],
-    ["飲み放題女", "飲み放題", 1980],
 
     // テイクアウト
     ["もつ串持帰", "テイクアウト", 150],
