--- a/index.html
+++ b/index.html
@@ -177,7 +177,15 @@ return res.sort((a,b) => b.timestamp - a.timestamp);
 };
 
 window.deleteSaleDoc = async (id) => { if(confirm("消去しますか？")) { await deleteDoc(doc(db, "sales", id)); await new Promise(r => setTimeout(r, 500)); window.showAdmin('day'); } };
-window.deleteDaySales = async (ids) => { if(confirm(`この日の${ids.length}件をまとめて削除しますか？`)) { await Promise.all(ids.map(id => deleteDoc(doc(db, "sales", id)))); await new Promise(r => setTimeout(r, 500)); window.showAdmin('dates'); } };
+window.deleteDaySales = async (label) => {
+    const entry = Object.values(window._dayDeleteMap || {}).find(x => x.label === label);
+    if (!entry) return alert("データが見つかりません");
+    if (confirm(`${label} の${entry.ids.length}件をまとめて削除しますか？`)) {
+        await Promise.all(entry.ids.map(id => deleteDoc(doc(db, "sales", id))));
+        await new Promise(r => setTimeout(r, 500));
+        window.showAdmin('dates');
+    }
+};
 window.cloudDelete = async (tableId) => { await deleteDoc(doc(db, "tables", tableId)); };
 </script>
 
@@ -507,8 +515,9 @@ async function showAdmin(mode) {
                 dayMap[key].t += s.total; dayMap[key].c++; dayMap[key].g += s.guests; dayMap[key].ids.push(s.id);
                 total += s.total; guests += s.guests;
             });
+            window._dayDeleteMap = dayMap;
             const sorted = Object.values(dayMap).sort((a,b) => b.ts - a.ts);
-            list.innerHTML = sorted.map(s => `<div class="sale-card"><div class="sale-time-row"><span class="sale-time" style="font-size:15px;">${s.label}</span></div><div class="sale-detail-info">件数: ${s.c} / 客数: ${s.g}名</div><div class="sale-total-line"><span class="sale-price-big">¥${s.t.toLocaleString()}</span><button class="btn-del-sale" onclick="deleteDaySales(${JSON.stringify(s.ids)})">削除</button></div></div>`).join('') || '<p style="text-align:center; padding:50px;">データなし</p>';
+            list.innerHTML = sorted.map((s, i) => `<div class="sale-card"><div class="sale-time-row"><span class="sale-time" style="font-size:15px;">${s.label}</span></div><div class="sale-detail-info">件数: ${s.c} / 客数: ${s.g}名</div><div class="sale-total-line"><span class="sale-price-big">¥${s.t.toLocaleString()}</span><button class="btn-del-sale" onclick="deleteDaySales('${s.label}')">削除</button></div></div>`).join('') || '<p style="text-align:center; padding:50px;">データなし</p>';
         } else if (mode === 'dow') {
             const labels = ['日','月','火','水','木','金','土'];
             let stats = [0,1,2,3,4,5,6].map(i=>({l:labels[i], t:0, c:0, g:0}));
