--- a/index.html
+++ b/index.html
@@ -162,8 +162,7 @@ await deleteDoc(doc(db, "tables", tableId));
 
 window.getSalesData = async (mode) => {
 const now = new Date();
-const { getDocs, collection, getFirestore, query } = await import("https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js");
-const snap = await getDocs(collection(db, "sales"));
+const snap = await getDocs(query(collection(db, "sales")));
 let res = [];
 snap.forEach(d => {
     let data = d.data(); data.id = d.id;
